fix animation caption shifting

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -576,6 +576,12 @@ h3 {
   line-height:1.2rem;
 }
 
+#case-study .img-wrapper p.block-caption {
+  width: 100%;
+  display: block;
+  height: 3rem;
+}
+
 #case-study blockquote p {
   font-size: 1.3rem;
 }
